# payment-simulator

./: .gitignore  1-data-generation.ipynb  2-anomaly-detection.ipynb  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  Simulasi_RTGS.ipynb  anomaly_detection.ipynb  pyproject.toml
docs/: Makefile  conf.py  example_anomaly.ipynb  example_networks.ipynb  example_simulator.ipynb  examples_anomaly.ipynb  examples_networks.ipynb  examples_simulator.ipynb  index.md  make.bat  requirements.txt
docs/_build/doctrees/: changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  example_anomaly.doctree  example_networks.doctree  example_simulator.doctree  index.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/autoapi/payment_simulator/: index.doctree
docs/_build/html/: .buildinfo  changelog.html  conduct.html  contributing.html  example_anomaly.html  example_networks.html  example_simulator.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/payment_simulator/: anomaly.html  (+3 more)
docs/_build/html/_sources/: example_anomaly.ipynb.txt  example_simulator.ipynb.txt
docs/_build/html/autoapi/: index.html
docs/_build/jupyter_execute/: example_anomaly.ipynb  example_networks.ipynb  example_simulator.ipynb
src/: RTGS.py  anomaly.py  networks.py  simulator.py  utils.py
src/payment_simulator/: __init__.py  anomaly.py  constants.py  networks.py  simulator.py  utils.py
tests/: test_anomaly.py  test_networks.py  test_simulator.py
(+15 files in other folders)
