[tool.poetry]
name = "payment_simulator"
version = "0.1.0"
description = "Simulating Large Value Payments"
authors = ["Hanzholah Shobri", "Farhan M. Sumadiredja"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
pandas = "^2.2.2"
networkx = "^3.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = "tests/*.py"

[[tool.mypy.overrides]]
module = ["networkx"]
ignore_missing_imports = true
